[gd_scene load_steps=11 format=3 uid="uid://18ckjmkg587r"]

[ext_resource type="Texture2D" uid="uid://d2p5vwcuoxwb4" path="res://Alerts/Images/WhiteBox.png" id="1_0gvqo"]
[ext_resource type="Script" path="res://Alerts/VipAlert/VipAlert.gd" id="1_a0dta"]
[ext_resource type="Texture2D" uid="uid://csecwkrk3trlm" path="res://Alerts/Images/VipText.png" id="2_xfuo8"]
[ext_resource type="AudioStream" uid="uid://cfpec6a5ic6b8" path="res://Alerts/SFX/win_long.wav" id="4_75x0h"]

[sub_resource type="SystemFont" id="SystemFont_1dn73"]
font_names = PackedStringArray("Pixellari")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_t8k61"]
font = SubResource("SystemFont_1dn73")
font_size = 22
font_color = Color(0.253906, 0.265625, 0.324219, 1)

[sub_resource type="LabelSettings" id="LabelSettings_p067g"]
font = SubResource("SystemFont_1dn73")
font_size = 54
font_color = Color(0.253906, 0.265625, 0.324219, 1)

[sub_resource type="Animation" id="Animation_1cpf8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container/ScaledContainer/NinePatchRect:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(119, 33)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Container/Extra:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_wtlca"]
resource_name = "show"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 9.8, 9.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1e-05), Vector2(1, 1), Vector2(1, 1), Vector2(1, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container/ScaledContainer/NinePatchRect:size")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.6, 1.1, 1.4, 9.1, 9.3, 9.5, 9.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(119, 33), Vector2(119, 33), Vector2(119, 33), Vector2(119, 88), Vector2(119, 88), Vector2(119, 88), Vector2(119, 88), Vector2(119, 33), Vector2(119, 33)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Container/Extra:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 1.4, 9.2, 9.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_75x0h")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5hvbx"]
_data = {
"RESET": SubResource("Animation_1cpf8"),
"show": SubResource("Animation_wtlca")
}

[node name="VipAlert" type="Node2D"]
script = ExtResource("1_a0dta")

[node name="Container" type="Node2D" parent="."]
position = Vector2(1658, 152)
scale = Vector2(1, 1e-05)

[node name="ScaledContainer" type="Node2D" parent="Container"]
texture_filter = 1
position = Vector2(-174, -47)
scale = Vector2(3, 3)

[node name="NinePatchRect" type="NinePatchRect" parent="Container/ScaledContainer"]
offset_right = 119.0
offset_bottom = 33.0
texture = ExtResource("1_0gvqo")
region_rect = Rect2(3, 3, 116, 40)
patch_margin_left = 35
patch_margin_top = 17
patch_margin_right = 47
patch_margin_bottom = 16

[node name="VipText" type="Sprite2D" parent="Container/ScaledContainer"]
position = Vector2(25.6667, 13.6667)
texture = ExtResource("2_xfuo8")

[node name="Extra" type="Node2D" parent="Container"]
modulate = Color(1, 1, 1, 0)

[node name="UserNameLabel" type="Label" parent="Container/Extra"]
offset_left = -147.0
offset_top = 32.0
offset_right = 146.0
offset_bottom = 58.0
text = "DHardy"
label_settings = SubResource("LabelSettings_t8k61")
horizontal_alignment = 1

[node name="Label3" type="Label" parent="Container/Extra"]
offset_left = -147.0
offset_top = 60.0
offset_right = 146.0
offset_bottom = 112.0
text = "A canjeado el VIP y a sido
incrementado a"
label_settings = SubResource("LabelSettings_t8k61")
horizontal_alignment = 1

[node name="CostLabel" type="Label" parent="Container/Extra"]
offset_left = -150.0
offset_top = 121.0
offset_right = 146.0
offset_bottom = 179.0
text = "100 000"
label_settings = SubResource("LabelSettings_p067g")
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5hvbx")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -9.414

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
